<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:orientation="vertical"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="2"
        android:background="@color/gray_x">

        <TextView
            android:id="@+id/title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/app_name"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="@dimen/text_size_small"
            />

        <TextView
            android:id="@+id/math"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/math_main_text"
            android:layout_marginRight="15dp"
            />

        <TextView
            android:id="@+id/resultado"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="0"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/math"
            app:layout_constraintBottom_toBottomOf="parent"
            android:textSize="@dimen/math_result_text"
            android:layout_marginRight="15dp"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:background="@color/gray_x">

        <TableRow
            android:layout_weight="1">

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_1"
                android:text="@string/c"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_2"
                android:text="@string/opParenthesis"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_3"
                android:text="@string/clParenthesis"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <ImageButton
                android:id="@+id/btt_4"
                android:src="@drawable/backspace"
                android:background="@color/pink4"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
        </TableRow>

        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_5"
                android:text="@string/power"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_6"
                android:text="@string/root"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_7"
                android:text="@string/percentage"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_8"
                android:text="@string/division"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_9"
                android:text="@string/seven"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_10"
                android:text="@string/eight"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_11"
                android:text="@string/nine"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_12"
                android:text="@string/times"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_13"
                android:text="@string/four"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_14"
                android:text="@string/five"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="1dp"
                android:layout_height="match_parent"
                android:layout_width="@dimen/buttons_margin"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_15"
                android:text="@string/six"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="1dp"
                android:layout_height="match_parent"
                android:layout_width="@dimen/buttons_margin"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_16"
                android:text="@string/minus"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_17"
                android:text="@string/one"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_18"
                android:text="@string/two"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_19"
                android:text="@string/three"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_20"
                android:text="@string/plus"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
        </TableRow>
        <TableRow
            android:layout_weight="1">
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_21"
                android:text="@string/swish"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_22"
                android:text="@string/zero"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_23"
                android:text="@string/dot"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink1"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                />
            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/btt_24"
                android:text="@string/equals"
                android:textSize="@dimen/text_size_normal"
                android:background="@color/pink3"
                android:textColor="@color/pink6"
                android:layout_margin="@dimen/buttons_margin"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                />
        </TableRow>
    </TableLayout>
</LinearLayout>